toml-pretty-deser/tests/snapshots/g01__map_key_custom_help_values_have_errors.snap
---
source: toml-pretty-deser/tests/g01.rs
expression: "e.pretty(\"test.toml\")"
---
Error 1/3
  ╭─test.toml
  ┆
2 │ [barcodes]
3 │ foo = "not_a_number"
  ┆       ───────┬──────
  ┆              │
  ┆              ╰─────── Wrong type: expected u8, found string.
──╯
Hint: This value has the wrong type.

Error 2/3
  ╭─test.toml
  ┆
2 │ [barcodes]
3 │ foo = "not_a_number"
  ┆ ─┬─
  ┆  │
  ┆  ╰─────────────────── This key is not allowed
──╯
Hint: All keys are forbidden in this test

Error 3/3
  ╭─test.toml
  ┆
2 │ [barcodes]
3 │ foo = "not_a_number"
4 │ bar = 2
  ┆ ─┬─
  ┆  │
  ┆  ╰────── This key is not allowed
──╯
Hint: All keys are forbidden in this test
